--- a/functions/package.json
+++ b/functions/package.json
@@ -11,10 +11,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "apollo-server-express": "^2.1.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3"
+    "firebase-functions": "^2.0.3",
+    "graphql": "^14.0.2"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.3",
     "tslint": "~5.8.0",
     "typescript": "~2.8.3"
   },
